--- a/journal/202102.md
+++ b/journal/202102.md
@@ -4,7 +4,7 @@
 
 _Image: {"$title by $author. $optional-description" for artwork, "$description" for photos}_
 
-{ introduction, major news of the month ordered by impact, don't put any links here }
+February's highlights:
 
 - v1.6.1 software was released, it adds bug fixes and UX improvements to the 1.6 release
 - PoW and PoS upgrade thresholds were met, but not before a ticket voting policy which forces miners to upgrade was released
