try bold subsections in Network

--- a/journal/202102.md
+++ b/journal/202102.md
@@ -234,7 +234,7 @@ After the record-breaking turnout for two proposals at the start of Feb (covered
 
 ## Network
 
-Hashrate: February's [hashrate](https://explorer.dcrdata.org/charts?chart=hashrate&zoom=kkf13di6-kltwy2po&scale=linear&bin=block&axis=time) opened at ~428 Ph/s and closed ~420 Ph/s, bottoming at 278 Ph/s and peaking at 537 Ph/s throughout the month.
+**Hashrate**: February's [hashrate](https://explorer.dcrdata.org/charts?chart=hashrate&zoom=kkf13di6-kltwy2po&scale=linear&bin=block&axis=time) opened at ~428 Ph/s and closed ~420 Ph/s, bottoming at 278 Ph/s and peaking at 537 Ph/s throughout the month.
 
 Pool hashrate [distribution](https://miningpoolstats.stream/decred) as of Mar 1: Poolin 36%, Antpool 34%, F2Pool 8%, Luxor 2%, BTC.com 1.5%, Huobipool 0.8%, Coinmine 0.08%, UUPool 0.03%, unknown 18%.
 
@@ -242,11 +242,11 @@ Instant snapshots are too volatile, so compare that to how 1,000 blocks (3.5 day
 
 UUPool's reported hashrate has dropped from the top spot to the bottom and it looks like its miners have migrated to Antpool and F2Pool. New unidentified addresses are also showing up.
 
-Staking: [Ticket price](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=kkf13di6-kltwy2po&axis=time&visibility=true-true&mode=stepped) varied between 154.3-220.4 DCR, with 30-day [average](https://dcrstats.com/) at 181.7 DCR (+8.5). The [locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=kkf13di6-kltwy2po&scale=linear&bin=block&axis=time) was 6.74-7.30 million DCR, meaning that 53.6-57.7% of the circulating supply [participated](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=kkf13di6-kltwy2po&scale=linear&bin=block&axis=time) in proof-of-stake.
+**Staking**: [Ticket price](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=kkf13di6-kltwy2po&axis=time&visibility=true-true&mode=stepped) varied between 154.3-220.4 DCR, with 30-day [average](https://dcrstats.com/) at 181.7 DCR (+8.5). The [locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=kkf13di6-kltwy2po&scale=linear&bin=block&axis=time) was 6.74-7.30 million DCR, meaning that 53.6-57.7% of the circulating supply [participated](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=kkf13di6-kltwy2po&scale=linear&bin=block&axis=time) in proof-of-stake.
 
 It looks like we are [breaking](https://twitter.com/michae2xl/status/1359609723541213186) a record every month in terms of both ticket price and participation!
 
-Nodes: Throughout February there were around 220 reachable nodes according to [dcrextdata](https://dcrextdata.planetdecred.org/nodes). Average version distribution from dcr.farm: 35% dcrd v1.6.0, 10% dcrd v1.6.1, 10% dcrd v1.5.2, 7% dcrd v1.5.1, 5% dcrd v1.6 dev and RC builds, 4% dcrd v1.7 dev builds, 2% dcrd v1.5.0, 1.5% dcrd v1.5 dev and RC builds, 9% dcrwallet v1.6.0, 4% dcrwallet v1.6.1, 3% dcrwallet v1.5.1, ~9% others.
+**Nodes**: Throughout February there were around 220 reachable nodes according to [dcrextdata](https://dcrextdata.planetdecred.org/nodes). Average version distribution from dcr.farm: 35% dcrd v1.6.0, 10% dcrd v1.6.1, 10% dcrd v1.5.2, 7% dcrd v1.5.1, 5% dcrd v1.6 dev and RC builds, 4% dcrd v1.7 dev builds, 2% dcrd v1.5.0, 1.5% dcrd v1.5 dev and RC builds, 9% dcrwallet v1.6.0, 4% dcrwallet v1.6.1, 3% dcrwallet v1.5.1, ~9% others.
 
 [charts.dcr.farm](https://charts.dcr.farm/) has been shut down due to low demand and high operating costs to keep it running in a sustainable way. We thank the operators for all the network insights shared over the years. dcr.farm's legacy and new [VSP](https://dcr.farm/) are still operational.
 
