--- a/journal/202102.md
+++ b/journal/202102.md
@@ -1,8 +1,8 @@
 # {DRAFT} Decred Journal – February 2020
 
-![{alt text}](../img/{file.jpg} "{hover tooltip text}")
+![abstract art](../img/202102.1.github.png)
 
-_Image: {"$title by $author. $optional-description" for artwork, "$description" for photos}_
+_Image: L2 by @saender_
 
 February's highlights:
 
@@ -393,5 +393,5 @@ Credits (alphabetical order):
 
 - writing and editing: bee, degeri, l1ndseymm, richardred
 - reviews and feedback: davecgh, jholdstock, peter\_zen
-- title image: {}
+- title image: saender
 - funding: Decred stakeholders
