--- a/journal/202102.md
+++ b/journal/202102.md
@@ -329,7 +329,7 @@ Art and fun:
 - "I wish to be [irrisistible](https://twitter.com/Decred_ES/status/1358855083396653062) to men!"
 - introducing [Decred Pączki](https://twitter.com/LolekBolek74/status/1359866192538787843) (doughnuts)
 
-{ food pic is due }
+![Decred doughnuts](../img/202102.2.github.png)
 
 Translations:
 
