--- a/journal/202102.md
+++ b/journal/202102.md
@@ -294,7 +294,7 @@ Attended:
 - Feb 9 - [Decred intro and features](https://decredcommunity.github.io/events/index/20210209.1) - Internet. @michae2xl was invited by Monnos (Brazilian exchange that listed DCR in [January](202101.md#integrations)) to introduce Decred in an Instagram live. Together with Rodrigo Soeiro (CEO) they have addressed new people in the space, showed Decred's products, and discussed their potential.
 - Feb 20 - [Alternative Consensus: Let’s Talk PoS](https://decredcommunity.github.io/events/index/20210220.1) - Internet. @elian talked all things Decred with [Criptodemia](https://twitter.com/criptodemia) and [Kevin Negocios](https://twitter.com/KevinNegocios) from [Veinte Exchange](https://twitter.com/Veinte_ven) of Venezuela in a 1+ hour livestream.
 
-{ you know what pic to insert here! }
+![Decred Cake 3](../img/202102.3.github.png)
 
 Upcoming:
 
