--- a/journal/202102.md
+++ b/journal/202102.md
@@ -12,6 +12,22 @@ February's highlights:
 - Kohola, a front-end for dcrwallet geared towards expert users, was introduced and released
 - The Decred Journal and Open Source Research 2021 proposals were approved by stakeholder vote
 
+Contents:
+
+- [v1.6.1 Patch Release](#v161-patch-release)
+- [Vote on the New Consensus!](#vote-on-the-new-consensus)
+- [Development](#development)
+- [People](#people)
+- [Governance](#governance)
+- [Network](#network)
+- [Integrations](#integrations)
+- [Outreach](#outreach)
+- [Events](#events)
+- [Media](#media)
+- [Community Discussions](#community-discussions)
+- [Markets](#markets)
+- [Relevant External](#relevant-external)
+
 ## v1.6.1 Patch Release
 
 The new [release](https://twitter.com/decredproject/status/1364636813168693252) includes bug fixes and UX improvements for dcrd, dcrwallet, Decrediton, and dcrdex. Most changes have been addressing issues with the new VSP staking and how it plays together with mixing. Importantly, it allows Decrediton users to set consensus vote choices with both legacy and new VSP.
