--- a/journal/202103.md
+++ b/journal/202103.md
@@ -31,7 +31,17 @@ The work reported below has the "merged to master" status unless noted otherwise
 
 **[dcrd](https://github.com/decred/dcrd)**
 
-- {}
+Merged in master and the upcoming v1.6.2 release:
+
+- only send [fast block](https://github.com/decred/dcrd/pull/2606) announcements to full node peers, and don't send them to lightweight clients that cannot properly handle them. This significantly improves dcrwallet's SPV operation. { how much better? }
+
+Main addition of the month is the new package for handling [standard addresses](https://github.com/decred/dcrd/pull/2610) that is easier to follow and use than the code it replaces. It is also more generic, allowing to add new address types in the future. If you have ever wondered how "scripts" and "addresses" are related, or how "standard" is different from "consensus", check the shiny new [README](https://github.com/decred/dcrd/tree/master/txscript/stdaddr) of the package or follow its examples and comprehensive tests to fully understand how it works. Thanks to all reviewers and newcomers for sharing how it looks to the fresh eyes!
+
+Other merged work:
+
+- option to not print [timestamps](https://github.com/decred/dcrd/pull/2608) in logs
+- more accurate detection of [own IP](https://github.com/decred/dcrd/pull/2571) address to fix some UPnP configurations
+- increased test coverage for rpcserver and the new UTXO cache
 
 **[dcrwallet](https://github.com/decred/dcrwallet)**
 
