--- a/journal/202103.md
+++ b/journal/202103.md
@@ -45,11 +45,13 @@ Other merged work:
 
 **[dcrwallet](https://github.com/decred/dcrwallet)**
 
-- {}
+Merged in master and the upcoming v1.6.2 release:
 
-**[dcrctl](https://github.com/decred/dcrctl)**
-
-- {}
+- prevent [low-fee](https://github.com/decred/dcrwallet/pull/2011) submissions to the mixing server, which are now being rejected
+- fixed [UTXO handling](https://github.com/decred/dcrwallet/pull/2013) to avoid confusing "insufficient balance" errors when the remaining balance allows to buy one ticket
+- config flag to disable [logging](https://github.com/decred/dcrwallet/pull/2014) to files
+- update [vote choices](https://github.com/decred/dcrwallet/pull/2016) for vspd tickets using the `setvotechoices` command, if the VSP is configured in dcrwallet settings
+- new `accountunlocked` [command](https://github.com/decred/dcrwallet/pull/2020) reporting account encryption and locked status (needed for dcrdex but is also useful on its own)
 
 **[Decrediton](https://github.com/decred/decrediton)**
 
