RelExt add todo

--- a/journal/202103.md
+++ b/journal/202103.md
@@ -323,6 +323,8 @@ https://twitter.com/_Checkmatey_/status/1369769392884436992
 
 { cc tech: PoW, ASIC resistance, full nodes, cc network security, etc }
 
+{ investigate - did Grin have an inflation bug? } https://forum.grin.mw/t/resolved-d-o-n-o-t-u-s-e-g-r-i-n-g-r-i-n-w-a-l-l-e-t-g-r-i-n-i-r-o-n-b-e-l-l-y-u-n-t-i-l-f-u-r-t-h-e-r-n-o-t-i-c-e/8620/53
+
 Ethereum's ProgPoW tensions have found an [expression](https://twitter.com/_Checkmatey_/status/1366831390424068098) in miners' hashrate which signals 61% opposition and only 14% support as of Feb.
 
 { interesting claims in comments, [this](https://twitter.com/iamDCinvestor/status/1366746473535332360) says such signaling is unreliable and [this](https://twitter.com/Tetranode/status/1366818706706165762) predicts a scenario involving DeFi and claims that MakerDAO and AAVE back EIP-1559. I don't have context to understand, we can move this to Mar to cover all that if its interesting }
