--- a/journal/202103.md
+++ b/journal/202103.md
@@ -215,7 +215,7 @@ yes! https://matrix.to/#/!aNnAOHkWUdNcEXRGjJ:decred.org/$eRv4AVR4bKVNyhGpjO__tZ3
 
 { maybe } The share of [mixed coins](https://explorer.dcrdata.org/charts?chart=coin-supply&zoom={t1}-{t2}&bin=day&axis=time&visibility=true-true-true) varied between {n.n}-{n.n}%.
 
-{ maybe } Decred's [Lightning Network](https://ln-map.jholdstock.uk/) has seen {} nodes (+{}), {} channels (+{}) with a total capacity of {n.n} DCR (+{n.n}), as of {date}.
+Decred's [Lightning Network](https://ln-map.jholdstock.uk/) has seen 34 nodes (+4), 60 channels (+4) with a total capacity of 20 DCR (+3.2), as of Apr 1.
 
 { any interesting analysis or events in the network }
 
