--- a/journal/202103.md
+++ b/journal/202103.md
@@ -74,6 +74,8 @@ Merged in master:
 
 A total of 53 PRs from 5 contributors were [merged](https://github.com/decred/decrediton/pulls?q=is%3Apr+merged%3A2021-03-01..2021-03-31+sort%3Aupdated-asc), changing 504 files, adding 14.5K and deleting 14.7K lines of code. Without many user-tangible changes, these large numbers basically mean a lot of "behind-the-scenes" infrastructure upgrades to make future development easier.
 
+In progress: [DCRDEX](https://github.com/decred/decrediton/pull/3356) integration and design updates.
+
 **[Politeia](https://github.com/decred/politeia)**
 
 An epic migration to a more scalable and [flexible](https://twitter.com/lukebp_/status/1376238020563767303) storage backend is [merged](https://github.com/decred/politeia/pull/1180) after almost 1 year of development. On a high level it brings us the following:
@@ -126,7 +128,24 @@ You can learn more about Decred's LN in the recent Decred in Depth with @matheus
 
 **[dcrdex](https://github.com/decred/dcrdex)**
 
-- {}
+- ability to reset and change the [password](https://github.com/decred/dcrdex/pull/978)
+- ability to [disable](https://github.com/decred/dcrdex/pull/985) account
+- allow [sorting](https://github.com/decred/dcrdex/pull/955) Your Orders table
+- indicate [disconnected](https://github.com/decred/dcrdex/pull/989) state
+- support account-based [encryption](https://github.com/decred/dcrdex/pull/1023) and locking for Decred (this will be used by Decrediton to only lock the trading account but not others)
+- allow multiple authenticated [sessions](https://github.com/decred/dcrdex/pull/1012) (to login in different browsers at the same time)
+- send most recent [fee rate](https://github.com/decred/dcrdex/pull/1000) estimate to the client to support SPV clients, improve order estimates and tighten up security
+- Ethereum simnet [harness](https://github.com/decred/dcrdex/pull/956) for testing during development
+- foundations for [Bitcoin Cash](https://github.com/decred/dcrdex/pull/944) support
+- send raw [transaction](https://github.com/decred/dcrdex/pull/804) data to accomodate SPV clients who don't have a mempool and are in the dark until a contract's tx is mined (this also makes the process more robust against poor propagation of tx on the network)
+- added database [versioning](https://github.com/decred/dcrdex/pull/959) and generated historical trading data (volumes, highs and lows, etc)
+- updated to use [Webpack 5](https://github.com/decred/dcrdex/pull/990) and other newer modules
+
+A total of 25 PRs from 6 contributors were [merged](https://github.com/decred/dcrdex/pulls?q=is%3Apr+merged%3A2021-03-01..2021-03-31+sort%3Aupdated-asc), adding 22K and deleting 9K lines of code.
+
+In progress: Ethereum support, a new [registration](https://github.com/decred/dcrdex/pull/1017) protocol (more robust + supports fee payments in arbitrary assets), demo [Electron](https://github.com/decred/dcrdex/pull/999) integration, and multiple other improvements.
+
+See the [v0.2](https://github.com/decred/dcrdex/milestone/6) and [v0.3](https://github.com/decred/dcrdex/milestone/12) milestones to track progress of next releases.
 
 **[dcrandroid](https://github.com/planetdecred/dcrandroid)**
 
