Dev dcrdex swap feedback welcome

--- a/journal/202103.md
+++ b/journal/202103.md
@@ -145,6 +145,8 @@ A total of 25 PRs from 6 contributors were [merged](https://github.com/decred/dc
 
 In progress: Ethereum support, a new [registration](https://github.com/decred/dcrdex/pull/1017) protocol (more robust + supports fee payments in arbitrary assets), demo [Electron](https://github.com/decred/dcrdex/pull/999) integration, and multiple other improvements.
 
+Feedback from Ethereum experts on the [swap contracts](https://github.com/decred/dcrdex/issues/1001) used is greatly appreciated.
+
 See the [v0.2](https://github.com/decred/dcrdex/milestone/6) and [v0.3](https://github.com/decred/dcrdex/milestone/12) milestones to track progress of next releases.
 
 **[dcrandroid](https://github.com/planetdecred/dcrandroid)**
