--- a/journal/202103.md
+++ b/journal/202103.md
@@ -149,19 +149,27 @@ Feedback from Ethereum experts on the [swap contracts](https://github.com/decred
 
 See the [v0.2](https://github.com/decred/dcrdex/milestone/6) and [v0.3](https://github.com/decred/dcrdex/milestone/12) milestones to track progress of next releases.
 
-**[dcrandroid](https://github.com/planetdecred/dcrandroid)**
-
-- {}
-
-{ also check the base library https://github.com/planetdecred/dcrlibwallet }
-
 **[dcrios](https://github.com/planetdecred/dcrios)**
 
-- {}
+In progress:
+
+- showing Politeia [proposals](https://github.com/planetdecred/dcrios/pull/715)
+- [mixing](https://github.com/planetdecred/dcrios/pull/727) implementation
+- update dcrlibwallet to latest Decred modules and fix sync issues
 
 **[godcr](https://github.com/planetdecred/godcr)**
 
-- {}
+- new UI for the [Send](https://github.com/planetdecred/godcr/pull/320) page
+- updated UI for [Overview](https://github.com/planetdecred/godcr/pull/338) and [Account](https://github.com/planetdecred/godcr/pull/348) pages
+- added [About](https://github.com/planetdecred/godcr/pull/352) page
+- added staking and other info to account [details](https://github.com/planetdecred/godcr/pull/337) page
+- tweaked text [inputs](https://github.com/planetdecred/godcr/pull/341)
+- [debug](https://github.com/planetdecred/godcr/pull/346) page with logs
+- start [sync](https://github.com/planetdecred/godcr/pull/343) on app startup after passphrase is entered
+- request [passphrase](https://github.com/planetdecred/godcr/pull/324) when syncing a restore wallet, to allow address generation
+- code cleanup and bug fixes
+
+In progress: Politeia [proposals](https://github.com/planetdecred/godcr/pull/331) page and furher UI work.
 
 **[dcrdata](https://github.com/decred/dcrdata)**
 
