--- a/journal/202103.md
+++ b/journal/202103.md
@@ -184,6 +184,13 @@ In progress: Politeia [proposals](https://github.com/planetdecred/godcr/pull/331
 - list [vspd](https://github.com/decred/dcrweb/pull/965) instances on the [VSP](https://decred.org/vsp/) page
 - updated [Exchanges](https://decred.org/exchanges/) page
 
+**[Decred Address Scanner](https://github.com/JoeGruffins/dcraddrscanner)**
+
+- license changed to ISC to satisfy F-Droid requirements
+- code repository moved to [decred](https://github.com/decred/dcraddrscanner) org
+
+In addition to [Google Play](https://play.google.com/store/apps/details?id=com.joegruff.decredaddressscanner) and direct [APK](https://github.com/decred/dcraddrscanner/releases/tag/v1.08) download, the app is now also available on [F-Droid](https://f-droid.org/en/packages/com.decred.decredaddressscanner/)!
+
 { check if anything interesting happened in the other repos under
 
 - https://github.com/decred
@@ -194,9 +201,6 @@ In progress: Politeia [proposals](https://github.com/planetdecred/godcr/pull/331
 
 Other:
 
-- { https://github.com/decred/dcraddrscanner moved under decred, move to own section if there are more news }
-  - in F-Droid https://gitlab.com/fdroid/fdroiddata/-/commit/3e240f5220c845f2018ccd3de374436e927aa243
-  - https://f-droid.org/en/packages/com.decred.decredaddressscanner/
 - ticket splitting clarification https://github.com/decredcommunity/wiki/pull/7
 
 ## People
