--- a/journal/202103.md
+++ b/journal/202103.md
@@ -141,6 +141,7 @@ You can learn more about Decred's LN in the recent Decred in Depth with @matheus
 - send raw [transaction](https://github.com/decred/dcrdex/pull/804) data to accomodate SPV clients who don't have a mempool and are in the dark until a contract's tx is mined (this also makes the process more robust against poor propagation of tx on the network)
 - added database [versioning](https://github.com/decred/dcrdex/pull/959) and generated historical trading data (volumes, highs and lows, etc)
 - updated to use [Webpack 5](https://github.com/decred/dcrdex/pull/990) and other newer modules
+- [dex.decred.org](https://dex.decred.org/) updated with shiny new visuals by @30000fps
 
 A total of 25 PRs from 6 contributors were [merged](https://github.com/decred/dcrdex/pulls?q=is%3Apr+merged%3A2021-03-01..2021-03-31+sort%3Aupdated-asc), adding 22K and deleting 9K lines of code.
 
@@ -192,17 +193,19 @@ In progress: Politeia [proposals](https://github.com/planetdecred/godcr/pull/331
 
 In addition to [Google Play](https://play.google.com/store/apps/details?id=com.joegruff.decredaddressscanner) and direct [APK](https://github.com/decred/dcraddrscanner/releases/tag/v1.08) download, the app is now also available on [F-Droid](https://f-droid.org/en/packages/com.decred.decredaddressscanner/)!
 
-{ check if anything interesting happened in the other repos under
+**Ticket Splitting**
 
-- https://github.com/decred
-- https://github.com/planetdecred
-- https://github.com/raedahgroup
+@bee has compiled a comprehensive [document](https://github.com/decredcommunity/wiki/blob/master/wiki/ticket-splitting-v1.6.md) with all recent knowledge about ticket splitting and v1.6 software. Key takeaways:
 
-}
+- existing ticket splitting solution will work with v1.5.2 software until around May 7, 2021 when it will stop syncing
+- everybody agrees it is nice to have, but there are currently no spare resources to allocate for it, given the low demand (81 split tickets per month is roughly 0.2% of all tickets)
+- the lowest hanging fruit to make it work with v1.6 is to patch the [client](https://github.com/matheusd/dcr-split-ticket-matcher) to support the new authentication in dcrwallet
+- this is a good opportunity for new developers to get familiar with Decred while making Decred staking more affordable
 
 Other:
 
-- ticket splitting clarification https://github.com/decredcommunity/wiki/pull/7
+- [decredpower.com](https://decredpower.com/) received a ton of new links and design tweaks
+- Bug Bounty program [reported](https://bounty.decred.org/2021/03/status-update/) that it has processed a total of 157 submissions and 15 were eligible for a payout. Congrats to [@proabiral](https://twitter.com/proabiral) who has been listed in the [Hall of Fame](https://bounty.decred.org/)!
 
 ## People
 
@@ -246,6 +249,8 @@ high abstain at the start of CV https://matrix.to/#/!uCnoeYfbhUnvwWihzS:decred.o
 { check https://github.com/decredcommunity/proposals/commits/master for updates }
 
 https://decredcommunity.github.io/proposals/approved
+
+design prop report https://github.com/decred/dcrdesign/issues/252
 
 Politeia Digest [issue {}]({}) and [issue {}]({}) have more details on the month's proposals.
 
