--- a/journal/202103.md
+++ b/journal/202103.md
@@ -81,16 +81,15 @@ In progress: [DCRDEX](https://github.com/decred/decrediton/pull/3356) integratio
 An epic migration to a more scalable and [flexible](https://twitter.com/lukebp_/status/1376238020563767303) storage backend is [merged](https://github.com/decred/politeia/pull/1180) after almost 1 year of development. On a high level it brings us the following:
 
 - scalability - it is no longer constrained to the file system of a single instance
-- timestamping and actual data are separated, allowing to truly censor (and delete) data without awkward trade-offs (mind that censoring only removes data but not the record proving that the server has seen it, i.e. the "audit trail" is immutable { correct? })
+- timestamps and data are separated, allowing to truly censor (and delete) data without awkward trade-offs (mind that censoring only removes data but not the record proving that the server has seen it, i.e. the "audit trail" is immutable { correct? })
 - ability to retrieve a cryptographic timestamped proof for any piece of data, e.g. a single comment (there was no easy way to do this in the Git backend)
 - simplified `politeiad` API
 - plugin architecture where plugins can extend generic timestamped "records" with additional functionality, such as comments or ticket voting. Plugins can be turned on and off in a config file without writing code.
 - `politeiawww` API rewritten to be generic and application agnostic while plugins handle specialized routes
-- [v0.2.0](https://github.com/decred/politeia/releases/tag/v0.2.0) tag marks the last commit that supports the politeiad Git backend, the politeiad v1 API, and much of the politeiawww `www/v1` and `www/v2` APIs
 
-It rewrites much of the politeia codebase as can be seen from the stats: 47K lines added, 40K deleted, 345 files changed in 496 commits.
+[Backend](https://github.com/decred/politeia/pull/1180) and [frontend](https://github.com/decred/politeiagui/pull/2306) changes rewrote much of the Politeia codebase as can be seen from the stats: 51K lines added, 42K deleted, and 474 files changed.
 
-{ check readmes and pigui }
+[v0.2.0](https://github.com/decred/politeia/releases/tag/v0.2.0) tag marks the last commit that supports the politeiad Git backend, the politeiad v1 API, and much of the politeiawww `www/v1` and `www/v2` APIs.
 
 Other changes:
 
