--- a/journal/202103.md
+++ b/journal/202103.md
@@ -31,31 +31,29 @@ Contents: { sync at the end }
 
 The work reported below has the "merged to master" status unless noted otherwise. It means that the work is completed, reviewed, and integrated into the source code that advanced users can [build and run](https://medium.com/@artikozel/the-decred-node-back-to-the-source-part-one-27d4576e7e1c), but is not yet available in release binaries for regular users.
 
-{ hint: add below overview of activity for each project. add any other project that warrants a paragraph, drop projects without notable updates. for each project the order of reporting is: changes released > merged to master > started work > discussions and future plans }
-
 **[dcrd](https://github.com/decred/dcrd)**
 
 Merged in master and the upcoming v1.6.2 release:
 
 - only send [fast block](https://github.com/decred/dcrd/pull/2606) announcements to full node peers, and don't send them to lightweight clients that cannot properly handle them. This significantly improves dcrwallet's SPV operation. { how much better? }
 
-Main addition of the month is the new package for handling [standard addresses](https://github.com/decred/dcrd/pull/2610) that is easier to follow and use than the code it replaces. It is also more generic, allowing to add new address types in the future. If you have ever wondered how "scripts" and "addresses" are related, or how "standard" is different from "consensus", check the shiny new [README](https://github.com/decred/dcrd/tree/master/txscript/stdaddr) of the package or follow its examples and comprehensive tests to fully understand how it works. Thanks to all reviewers and newcomers for sharing how it looks to the fresh eyes!
+Main addition of the month is the new package for handling [standard addresses](https://github.com/decred/dcrd/pull/2610) that is easier to follow and use than the code it replaces. It is also more generic, allowing to add new address types in the future. If you have ever wondered how "scripts" and "addresses" are related, or how "standard" is different from "consensus", check the shiny new [README](https://github.com/decred/dcrd/tree/master/txscript/stdaddr) of the package or follow the examples and comprehensive tests to fully understand how it works. Thanks to all reviewers and welcome to the newcomers - it's always good to get a fresh pair of eyes!
 
 Other merged work:
 
 - option to not print [timestamps](https://github.com/decred/dcrd/pull/2608) in logs
 - more accurate detection of [own IP](https://github.com/decred/dcrd/pull/2571) address to fix some UPnP configurations
-- increased test coverage for rpcserver and the new UTXO cache
+- increased test coverage for `rpcserver` and the new UTXO cache
 
 **[dcrwallet](https://github.com/decred/dcrwallet)**
 
 Merged in master and the upcoming v1.6.2 release:
 
 - prevent [low-fee](https://github.com/decred/dcrwallet/pull/2011) submissions to the mixing server, which are now being rejected
-- fixed [UTXO handling](https://github.com/decred/dcrwallet/pull/2013) to avoid confusing "insufficient balance" errors when the remaining balance allows to buy one ticket
-- config flag to disable [logging](https://github.com/decred/dcrwallet/pull/2014) to files
+- fixed [UTXO handling](https://github.com/decred/dcrwallet/pull/2013) to avoid confusing "insufficient balance" errors when the remaining balance is enough to buy one more ticket
 - update [vote choices](https://github.com/decred/dcrwallet/pull/2016) for vspd tickets using the `setvotechoices` command, if the VSP is configured in dcrwallet settings
-- new `accountunlocked` [command](https://github.com/decred/dcrwallet/pull/2020) reporting account encryption and locked status (needed for dcrdex but is also useful on its own)
+- new `accountunlocked` [command](https://github.com/decred/dcrwallet/pull/2020) reporting account encryption and locked status (needed for DCRDEX but is also useful on its own)
+- config flag to disable [logging](https://github.com/decred/dcrwallet/pull/2014) to files
 
 **[Decrediton](https://github.com/decred/decrediton)**
 
@@ -63,16 +61,16 @@ Patch release v1.6.2 is being [prepared](https://github.com/decred/decrediton/co
 
 Merged in master:
 
-- use the new [slider](https://github.com/decred/decrediton/pull/3046) component from pi-ui
+- use the new [slider](https://github.com/decred/decrediton/pull/3046) component from the pi-ui library
 - reorganized [balances](https://github.com/decred/decrediton/pull/3319) overview
-- List UTXO's view converted to a [modal](https://github.com/decred/decrediton/pull/3323)
+- List UTXOs view converted to a [modal](https://github.com/decred/decrediton/pull/3323)
 - improved layout of [Trezor](https://github.com/decred/decrediton/pull/2956)-related modals
 - project updated to latest [Electron 12](https://github.com/decred/decrediton/pull/3318) and [Webpack 5](https://github.com/decred/decrediton/pull/3322)
 - ~25 pull requests concluded the 1-year quest to migrate the codebase to a modern React programming style with functional [components](https://github.com/decred/decrediton/issues/2438), hooks, and [CSS modules](https://github.com/decred/decrediton/issues/2439)
 - increased UI test coverage
 - ~11 bug fixes
 
-A total of 53 PRs from 5 contributors were [merged](https://github.com/decred/decrediton/pulls?q=is%3Apr+merged%3A2021-03-01..2021-03-31+sort%3Aupdated-asc), changing 504 files, adding 14.5K and deleting 14.7K lines of code. Without many user-tangible changes, these large numbers basically mean a lot of "behind-the-scenes" infrastructure upgrades to make future development easier.
+A total of 53 PRs from 5 contributors were [merged](https://github.com/decred/decrediton/pulls?q=is%3Apr+merged%3A2021-03-01..2021-03-31+sort%3Aupdated-asc), changing 504 files, adding 14.5K and deleting 14.7K lines of code. Without too many user-tangible changes, these large numbers basically mean a lot of "behind-the-scenes" infrastructure upgrades to make future development easier.
 
 In progress: [DCRDEX](https://github.com/decred/decrediton/pull/3356) integration and design updates.
 
@@ -81,15 +79,18 @@ In progress: [DCRDEX](https://github.com/decred/decrediton/pull/3356) integratio
 An epic migration to a more scalable and [flexible](https://twitter.com/lukebp_/status/1376238020563767303) storage backend is [merged](https://github.com/decred/politeia/pull/1180) after almost 1 year of development. On a high level it brings us the following:
 
 - scalability - it is no longer constrained to the file system of a single instance
-- timestamps and data are separated, allowing to truly censor (and delete) data without awkward trade-offs (mind that censoring only removes data but not the record proving that the server has seen it, i.e. the "audit trail" is immutable { correct? })
-- ability to retrieve a cryptographic timestamped proof for any piece of data, e.g. a single comment (there was no easy way to do this in the Git backend)
+- timestamps and data are separated, allowing to truly censor (and delete) data without awkward trade-offs. Mind that censoring only removes data but not the record proving that the server has seen it, i.e. the "audit trail" is immutable. { correct? }
+- ability to retrieve a cryptographic timestamped proof for any piece of data, e.g. a single comment. There was no easy way to do this in the Git backend.
+- a proper plugin architecture where plugins can extend generic timestamped "records" with additional functionality, such as comments or ticket voting. Plugins can be turned on and off in a config file without writing code.
 - simplified `politeiad` API
-- plugin architecture where plugins can extend generic timestamped "records" with additional functionality, such as comments or ticket voting. Plugins can be turned on and off in a config file without writing code.
 - `politeiawww` API rewritten to be generic and application agnostic while plugins handle specialized routes
+- check the [pull request](https://github.com/decred/politeia/pull/1180) for more details { any other docs on the new architecture to link to? }
 
 [Backend](https://github.com/decred/politeia/pull/1180) and [frontend](https://github.com/decred/politeiagui/pull/2306) changes rewrote much of the Politeia codebase as can be seen from the stats: 51K lines added, 42K deleted, and 474 files changed.
 
-[v0.2.0](https://github.com/decred/politeia/releases/tag/v0.2.0) tag marks the last commit that supports the politeiad Git backend, the politeiad v1 API, and much of the politeiawww `www/v1` and `www/v2` APIs.
+For developers, the [v0.2.0](https://github.com/decred/politeia/releases/tag/v0.2.0) tag marks the last commit that supports the politeiad Git backend, the politeiad v1 API, and much of the politeiawww `www/v1` and `www/v2` APIs.
+
+{ can we invite people to test https://test-proposals2.decred.org/ ? }
 
 Other changes:
 
@@ -97,7 +98,7 @@ Other changes:
 
 **[dcrpool](https://github.com/decred/dcrpool)**
 
-Release candidate 2 for the upcoming v1.2.0 is [out](https://twitter.com/dnldd/status/1376476239062564868) for testing. For a full list of breaking changes, bug fixes and improvements see the [release notes](https://github.com/decred/dcrpool/releases/tag/v1.2.0-rc2).
+Release candidate 2 for the upcoming v1.2.0 is [out](https://twitter.com/dnldd/status/1376476239062564868) for testing. See the [release notes](https://github.com/decred/dcrpool/releases/tag/v1.2.0-rc2) for a full list of bug fixes, improvements and a couple of breaking changes.
 
 Merged in master:
 
@@ -109,13 +110,11 @@ Merged in master:
 
 @matheusd discovered an interesting hack that allows to implement PTLCs with very little changes to existing LN code built for HTLCs.
 
-PTLCs (Point-Time-Locked-Contracts) is an exciting development in the Lightning Network space for its potential to address the [limitations](https://suredbits.com/payment-points-monotone-access-structures/) of the currently-used HTLCs (Hashed Time-Locked Contracts) and offer new use cases.
+PTLCs (Point-Time-Locked-Contracts) is an exciting development in Lightning Network for its potential to address the [limitations](https://suredbits.com/payment-points-monotone-access-structures/) of HTLCs (Hashed Time-Locked Contracts) used currently and new use cases it makes possible.
 
-The hack to enable PTLCs was so simple _for @matheusd_ that he was able to build an interesting construct called Multi-Redeemer Transaction Tree (MRTTREE) with it, and an offline LN donation/payment prototype on top of that. The system is made of a patched [dcrlnd](https://github.com/decred/dcrlnd/compare/v0.3.1...matheusd:ptlc-poc), a PoC [server](https://github.com/matheusd/mrttree) to coordinate MRTTREEs, and a patched [Decrediton](https://github.com/matheusd/decrediton/commits/mrttree_poc). The math is explained in an [email](https://lists.linuxfoundation.org/pipermail/lightning-dev/2021-March/002983.html) to the lightning-dev mailing list and a presentation [video](https://www.youtube.com/watch?v=m1sQGHUKU7I) (offline LN payments demo starts around [15 min](https://www.youtube.com/watch?v=m1sQGHUKU7I&t=915s) mark).
+The hack to enable PTLCs was in fact so simple _for @matheusd_ that he was also able to code up an interesting construct called Multi-Redeemer Transaction Tree (MRTTREE) with it, and an offline LN donation/payment prototype on top of that. The system is made of a patched [dcrlnd](https://github.com/decred/dcrlnd/compare/v0.3.1...matheusd:ptlc-poc), a PoC [server](https://github.com/matheusd/mrttree) to coordinate MRTTREEs, and a patched [Decrediton](https://github.com/matheusd/decrediton/commits/mrttree_poc). The math is explained in an [email](https://lists.linuxfoundation.org/pipermail/lightning-dev/2021-March/002983.html) to the lightning-dev mailing list and a presentation [video](https://www.youtube.com/watch?v=m1sQGHUKU7I) (offline LN payments demo starts around [15 min](https://www.youtube.com/watch?v=m1sQGHUKU7I&t=915s) mark).
 
-The hack is experimental and needs some serious cryptographic look to make sure it is safe.
-
-This work is interesting in the context of LN-powered [multi-owner tickets](https://blog.decred.org/2019/11/11/LN-Multi-Owner-Tickets/) (a better form of ticket splitting), but also for other use cases like off-chain donations and crowdfunding.
+The hack is experimental and needs some serious cryptographic look to make sure it is safe. Nevertheless, this work is interesting in the context of LN-powered [multi-owner tickets](https://blog.decred.org/2019/11/11/LN-Multi-Owner-Tickets/) (a better form of ticket splitting), as well as other use cases enabled by MRTTREEs like off-chain donations and crowdfunding.
 
 { how this PTLC-based MRTTREE is different from a HTLC-based one described in the early blogs? }
 
@@ -126,21 +125,21 @@ You can learn more about Decred's LN in the recent Decred in Depth with @matheus
 - minimum [peer count](https://github.com/decred/cspp/pull/64) made configurable for servers that want to increase it to provide higher quality mixes
 - support [LOGFLAGS](https://github.com/decred/cspp/pull/66) for more flexible logging
 
-**[dcrdex](https://github.com/decred/dcrdex)**
+**[DCRDEX](https://github.com/decred/dcrdex)**
 
 - ability to reset and change the [password](https://github.com/decred/dcrdex/pull/978)
 - ability to [disable](https://github.com/decred/dcrdex/pull/985) account
 - allow [sorting](https://github.com/decred/dcrdex/pull/955) Your Orders table
 - indicate [disconnected](https://github.com/decred/dcrdex/pull/989) state
-- support account-based [encryption](https://github.com/decred/dcrdex/pull/1023) and locking for Decred (this will be used by Decrediton to only lock the trading account but not others)
+- support account-based [encryption](https://github.com/decred/dcrdex/pull/1023) and locking for DCR (this will be used by Decrediton to only lock the trading account but not others)
 - allow multiple authenticated [sessions](https://github.com/decred/dcrdex/pull/1012) (to login in different browsers at the same time)
 - send most recent [fee rate](https://github.com/decred/dcrdex/pull/1000) estimate to the client to support SPV clients, improve order estimates and tighten up security
+- send raw [transaction](https://github.com/decred/dcrdex/pull/804) data to accomodate SPV clients who don't have a mempool and are in the dark until a contract's tx is mined (this also makes the process more robust against poor propagation of tx on the network)
 - Ethereum simnet [harness](https://github.com/decred/dcrdex/pull/956) for testing during development
 - foundations for [Bitcoin Cash](https://github.com/decred/dcrdex/pull/944) support
-- send raw [transaction](https://github.com/decred/dcrdex/pull/804) data to accomodate SPV clients who don't have a mempool and are in the dark until a contract's tx is mined (this also makes the process more robust against poor propagation of tx on the network)
 - added database [versioning](https://github.com/decred/dcrdex/pull/959) and generated historical trading data (volumes, highs and lows, etc)
 - updated to use [Webpack 5](https://github.com/decred/dcrdex/pull/990) and other newer modules
-- [dex.decred.org](https://dex.decred.org/) updated with shiny new visuals by @30000fps
+- [dex.decred.org](https://dex.decred.org/) updated with cool new visuals by @30000fps
 
 A total of 25 PRs from 6 contributors were [merged](https://github.com/decred/dcrdex/pulls?q=is%3Apr+merged%3A2021-03-01..2021-03-31+sort%3Aupdated-asc), adding 22K and deleting 9K lines of code.
 
@@ -167,7 +166,7 @@ In progress:
 - tweaked text [inputs](https://github.com/planetdecred/godcr/pull/341)
 - [debug](https://github.com/planetdecred/godcr/pull/346) page with logs
 - start [sync](https://github.com/planetdecred/godcr/pull/343) on app startup after passphrase is entered
-- request [passphrase](https://github.com/planetdecred/godcr/pull/324) when syncing a restore wallet, to allow address generation
+- request [passphrase](https://github.com/planetdecred/godcr/pull/324) when syncing a restored wallet in order to allow address generation
 - code cleanup and bug fixes
 
 In progress: Politeia [proposals](https://github.com/planetdecred/godcr/pull/331) page and furher UI work.
@@ -185,10 +184,10 @@ In progress: Politeia [proposals](https://github.com/planetdecred/godcr/pull/331
 - list [vspd](https://github.com/decred/dcrweb/pull/965) instances on the [VSP](https://decred.org/vsp/) page
 - updated [Exchanges](https://decred.org/exchanges/) page
 
-**[Decred Address Scanner](https://github.com/JoeGruffins/dcraddrscanner)**
+**[Decred Address Scanner](https://github.com/decred/dcraddrscanner)**
 
-- license changed to ISC to satisfy F-Droid requirements
 - code repository moved to [decred](https://github.com/decred/dcraddrscanner) org
+- license changed to ISC to meet F-Droid requirements
 
 In addition to [Google Play](https://play.google.com/store/apps/details?id=com.joegruff.decredaddressscanner) and direct [APK](https://github.com/decred/dcraddrscanner/releases/tag/v1.08) download, the app is now also available on [F-Droid](https://f-droid.org/en/packages/com.decred.decredaddressscanner/)!
 
@@ -197,8 +196,8 @@ In addition to [Google Play](https://play.google.com/store/apps/details?id=com.j
 @bee has compiled a comprehensive [document](https://github.com/decredcommunity/wiki/blob/master/wiki/ticket-splitting-v1.6.md) with all recent knowledge about ticket splitting and v1.6 software. Key takeaways:
 
 - existing ticket splitting solution will work with v1.5.2 software until around May 7, 2021 when it will stop syncing
-- everybody agrees it is nice to have, but there are currently no spare resources to allocate for it, given the low demand (81 split tickets per month is roughly 0.2% of all tickets)
-- the lowest hanging fruit to make it work with v1.6 is to patch the [client](https://github.com/matheusd/dcr-split-ticket-matcher) to support the new authentication in dcrwallet
+- everybody agrees ticket splitting is good to have, but there are currently no spare resources to allocate for it, given the low demand (81 split tickets per month is roughly 0.2% of all tickets)
+- the lowest hanging fruit is to patch the [client](https://github.com/matheusd/dcr-split-ticket-matcher) to support the new authentication in dcrwallet v1.6
 - this is a good opportunity for new developers to get familiar with Decred while making Decred staking more affordable
 
 Other:
