add anchors to dev repos

--- a/journal/202103.md
+++ b/journal/202103.md
@@ -31,6 +31,8 @@ Contents: { sync at the end }
 
 The work reported below has the "merged to master" status unless noted otherwise. It means that the work is completed, reviewed, and integrated into the source code that advanced users can [build and run](https://medium.com/@artikozel/the-decred-node-back-to-the-source-part-one-27d4576e7e1c), but is not yet available in release binaries for regular users.
 
+<a id="dcrd" />
+
 **[dcrd](https://github.com/decred/dcrd)**
 
 Merged in master and the upcoming v1.6.2 release:
@@ -45,6 +47,8 @@ Other merged work:
 - more accurate detection of [own IP](https://github.com/decred/dcrd/pull/2571) address to fix some UPnP configurations
 - increased test coverage for `rpcserver` and the new UTXO cache
 
+<a id="dcrwallet" />
+
 **[dcrwallet](https://github.com/decred/dcrwallet)**
 
 Merged in master and the upcoming v1.6.2 release:
@@ -54,6 +58,8 @@ Merged in master and the upcoming v1.6.2 release:
 - update [vote choices](https://github.com/decred/dcrwallet/pull/2016) for vspd tickets using the `setvotechoices` command, if the VSP is configured in dcrwallet settings
 - new `accountunlocked` [command](https://github.com/decred/dcrwallet/pull/2020) reporting account encryption and locked status (needed for DCRDEX but is also useful on its own)
 - config flag to disable [logging](https://github.com/decred/dcrwallet/pull/2014) to files
+
+<a id="decrediton" />
 
 **[Decrediton](https://github.com/decred/decrediton)**
 
@@ -73,6 +79,8 @@ Merged in master:
 A total of 53 PRs from 5 contributors were [merged](https://github.com/decred/decrediton/pulls?q=is%3Apr+merged%3A2021-03-01..2021-03-31+sort%3Aupdated-asc), changing 504 files, adding 14.5K and deleting 14.7K lines of code. Without too many user-tangible changes, these large numbers basically mean a lot of "behind-the-scenes" infrastructure upgrades to make future development easier.
 
 In progress: [DCRDEX](https://github.com/decred/decrediton/pull/3356) integration and design updates.
+
+<a id="politeia" />
 
 **[Politeia](https://github.com/decred/politeia)**
 
@@ -96,6 +104,8 @@ Other changes:
 
 - trickling mode of the politeiavoter command-line tool was made truly [random](https://github.com/decred/politeia/pull/1368) instead of using random bucketized durations
 
+<a id="dcrpool" />
+
 **[dcrpool](https://github.com/decred/dcrpool)**
 
 Release candidate 2 for the upcoming v1.2.0 is [out](https://twitter.com/dnldd/status/1376476239062564868) for testing. See the [release notes](https://github.com/decred/dcrpool/releases/tag/v1.2.0-rc2) for a full list of bug fixes, improvements and a couple of breaking changes.
@@ -105,6 +115,8 @@ Merged in master:
 - fixed saving of [archived](https://github.com/decred/dcrpool/pull/309) payments
 - disable account [lookup](https://github.com/decred/dcrpool/pull/310) UI in solo pools where it is not available
 - `--homedir` config flag renamed to `--appdata` to be consistent with other software
+
+<a id="dcrlnd" />
 
 **[dcrlnd](https://github.com/decred/dcrlnd)**
 
@@ -120,10 +132,14 @@ The hack is experimental and needs some serious cryptographic look to make sure 
 
 You can learn more about Decred's LN in the recent Decred in Depth with @matheusd, starting at [28 min](https://www.youtube.com/watch?v=O6oIrRsZnMQ&t=27m54s) mark.
 
+<a id="cspp" />
+
 **[cspp](https://github.com/decred/cspp)**
 
 - minimum [peer count](https://github.com/decred/cspp/pull/64) made configurable for servers that want to increase it to provide higher quality mixes
 - support [LOGFLAGS](https://github.com/decred/cspp/pull/66) for more flexible logging
+
+<a id="dcrdex" />
 
 **[DCRDEX](https://github.com/decred/dcrdex)**
 
@@ -149,6 +165,8 @@ Feedback from Ethereum experts on the [swap contracts](https://github.com/decred
 
 See the [v0.2](https://github.com/decred/dcrdex/milestone/6) and [v0.3](https://github.com/decred/dcrdex/milestone/12) milestones to track progress of next releases.
 
+<a id="dcrios" />
+
 **[dcrios](https://github.com/planetdecred/dcrios)**
 
 In progress:
@@ -156,6 +174,8 @@ In progress:
 - showing Politeia [proposals](https://github.com/planetdecred/dcrios/pull/715)
 - [mixing](https://github.com/planetdecred/dcrios/pull/727) implementation
 - update dcrlibwallet to latest Decred modules and fix sync issues
+
+<a id="godcr" />
 
 **[godcr](https://github.com/planetdecred/godcr)**
 
@@ -171,18 +191,26 @@ In progress:
 
 In progress: Politeia [proposals](https://github.com/planetdecred/godcr/pull/331) page and furher UI work.
 
+<a id="dcrdata" />
+
 **[dcrdata](https://github.com/decred/dcrdata)**
 
 - [limit](https://github.com/decred/dcrdata/pull/1808) the amount of addresses allowed in POST requests
+
+<a id="dcrdevdocs" />
 
 **[dcrdevdocs](https://github.com/decred/dcrdevdocs)**
 
 - [Script Extensions](https://devdocs.decred.org/developer-guides/script-extensions/) page moved from dcrdocs
 
+<a id="dcrweb" />
+
 **[decred.org](https://github.com/decred/dcrweb)**
 
 - list [vspd](https://github.com/decred/dcrweb/pull/965) instances on the [VSP](https://decred.org/vsp/) page
 - updated [Exchanges](https://decred.org/exchanges/) page
+
+<a id="dcraddrscanner" />
 
 **[Decred Address Scanner](https://github.com/decred/dcraddrscanner)**
 
@@ -190,6 +218,8 @@ In progress: Politeia [proposals](https://github.com/planetdecred/godcr/pull/331
 - license changed to ISC to meet F-Droid requirements
 
 In addition to [Google Play](https://play.google.com/store/apps/details?id=com.joegruff.decredaddressscanner) and direct [APK](https://github.com/decred/dcraddrscanner/releases/tag/v1.08) download, the app is now also available on [F-Droid](https://f-droid.org/en/packages/com.decred.decredaddressscanner/)!
+
+<a id="ticketsplitting" />
 
 **Ticket Splitting**
 
