--- a/journal/202103.md
+++ b/journal/202103.md
@@ -456,7 +456,7 @@ You can submit a story [here](https://github.com/xaur/decred-news/labels/next%20
 
 Credits (alphabetical order):
 
-- writing and editing: {}
+- writing and editing: bee, richardred
 - reviews and feedback: {}
 - title image: {}
 - funding: Decred stakeholders
