Dev politeia add plans

--- a/journal/202103.md
+++ b/journal/202103.md
@@ -104,6 +104,10 @@ Other changes:
 
 - trickling mode of the politeiavoter command-line tool was made truly [random](https://github.com/decred/politeia/pull/1368) instead of using random bucketized durations
 
+> Short term we'll be focusing on feature development that took a backseat during these architecture upgrades. Things like proposal updates from the author, launching a reddit like forum for the community that runs on politeia, adding informal stakeholder polls, etc.
+> 
+> Long term, the idea is that politeia becomes a configurable, timestamped data store that can serve as the foundation for all kinds of use cases. ([@lukebp](https://twitter.com/lukebp_/status/1376259489704337408))
+
 <a id="dcrpool" />
 
 **[dcrpool](https://github.com/decred/dcrpool)**
